# license-checker

./: Cargo.toml  README.md  example.toml
src/: main.rs
test/: main.cc
