[package]
name = "license-checker"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.10"
clap = "2.33.0"
toml = "0.5.5"
serde = {version="1.0.102", features=["derive"]}
failure = "0.1.6"
regex = "1.3.1"
git2 = "0.10.1"
chrono = "0.4.9"
